syntax = "proto3";

option go_package = "go-health/api/health";

service Health {
    rpc SendPing(PingReq) returns (PingRes){}
}

message PingReq {
    string requester_name = 1;
    string msg = 2;
}

message PingRes {    
    string responser_name = 1;
    bool ok = 2;    
    string msg = 3;
}
